--- a/ian/checkout/index.html
+++ b/ian/checkout/index.html
@@ -39,9 +39,6 @@
         .fab {
             font-size: 32px;
         }
-        .col-md-9 > .card-body{
-            height: 100px;
-        }
     </style>
     <title>覆核 + 選擇付款</title>
 </head>
@@ -94,7 +91,7 @@
         </nav>
 
         <div class="row flex-column-reverse flex-lg-row">
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-lg-8">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
                     <div class="card-header">請選擇付款方式
                     </div>
@@ -105,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-lg-4">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
                     <div class="card-header">付款方式</div>
                     <div class="card-body">
