--- a/ian/balance/index.html
+++ b/ian/balance/index.html
@@ -97,10 +97,10 @@
         </div>
 
         <div class="row flex-column-reverse flex-lg-row">
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-lg-8">
                 <div class="card mb-3 bg-litegray">
                     <div class="row g-0">
-                        <div class="col-md-9">
+                        <div class="col-lg-9">
                             <div class="card-body">
                                 <h5 class="card-title">新增 NT$ 150</h5>
                                 <p class="card-text"><small class="text-info">最低儲值金額</small></p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="card mb-3 bg-litegray">
                     <div class="row g-0">
-                        <div class="col-md-9">
+                        <div class="col-lg-9">
                             <div class="card-body">
                                 <h5 class="card-title">新增 NT$ 500</h5>
                             </div>
@@ -121,11 +121,11 @@
                 </div>
                 <div class="card mb-3 bg-litegray">
                     <div class="row g-0">
-                        <div class="col-md-9">
+                        <div class="col-lg-9">
                             <div class="card-body">
                                 <h5 class="card-title" id="inputtext">或是新增...</h5>
                                     <input type="text" class="form-control" maxlength="5" placeholder="NT$" aria-label="Number"
-                                    aria-describedby="basic-addon1">
+                                    aria-describedby="basic-addon1" inputmode="numeric">
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-lg-4">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
                     <div class="card-header">你的帳戶</div>
                     <div class="card-body">
