新增訂單編號

--- a/ian/checkout/purchase.html
+++ b/ian/checkout/purchase.html
@@ -39,6 +39,9 @@
         .fab {
             font-size: 32px;
         }
+        small#num {
+            text-decoration: underline;
+        }
     </style>
     <title>覆核 + 選擇付款</title>
 </head>
@@ -111,6 +114,7 @@
             <div class="col-12 col-lg-4">
                 <div class="card text-white bg-dark" style="margin: 30px 0;">
                     <div class="card-header">確認付款</div>
+                    
                     <div class="card-body">
                         <p>我們接受下列安全的付款方式：</p>
                         <img src="./img/payment_visa.png" alt="">
