--- a/ian/checkout/purchase.html
+++ b/ian/checkout/purchase.html
@@ -11,7 +11,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <style>
         body {
-            background-color: #33415b;
+            background-color: rgb(51, 65, 91);
             color: #fff;
         }
 
@@ -27,12 +27,12 @@
         }
 
         .bg-transparent {
-            background: #33415b;
+            background-color: rgb(51, 65, 91);
             background: linear-gradient(to right, #33415b 0%, #4e648f 50%, #33415b 100%);
         }
 
         .bg-litegray {
-            background: #33415b;
+            background-color: rgb(51, 65, 91);
             background: linear-gradient(to right, #4e648f 0%, #364668 100%);
         }
 
