--- a/Game/index.html
+++ b/Game/index.html
@@ -43,7 +43,7 @@
 					<div class="card-body">
 						<h3 class="card-title">新人電腦</h3>
 						<p class="card-text newtexts">
-							您好，這裡是負責新人電腦廠商。
+							您好，這裡是負責新人電腦的廠商。
 							貴單位下週一有位新人，這裡有他的電腦設備。
 							請問今天是否方便為新人做簽收呢？
 							再跟您確認一下您的工位與新人的位置在哪裡？
@@ -143,12 +143,12 @@
 	const benqInput = document.getElementById('benqInput');
 	benqInput.addEventListener('input', benqupdateValue);
 	function benqupdateValue(i) {
-		benqContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 BenQ " + i.target.value + " 吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
+		benqContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 BenQ " + i.target.value + "吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
 	}
 	const lgInput = document.getElementById('lgInput');
 	lgInput.addEventListener('input', lgupdateValue);
 	function lgupdateValue(i) {
-		lgContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 LG " + i.target.value + " 吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
+		lgContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 LG " + i.target.value + "吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
 	}
 	const itemInput = document.getElementById('itemInput');
 	itemInput.addEventListener('input', itemupdateValue);
