--- a/Game/index.html
+++ b/Game/index.html
@@ -12,8 +12,8 @@
 
 	<title>懶人SOP-QNAv2</title>
 
-	<link rel="shortcut icon" type="image/png" href="#">
-	<link rel="apple-touch-icon" sizes="120x120" href="#">
+	<link rel="shortcut icon" type="image/png" href="https://imgur.com/PHYe7tE.png">
+	<link rel="apple-touch-icon" sizes="256x256" href="https://imgur.com/PHYe7tE.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
