--- a/Game/index.html
+++ b/Game/index.html
@@ -8,15 +8,22 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="google" content="notranslate">
-
-
 	<title>懶人SOP-QNAv2</title>
-
 	<link rel="shortcut icon" type="image/png" href="https://imgur.com/PHYe7tE.png">
 	<link rel="apple-touch-icon" sizes="256x256" href="https://imgur.com/PHYe7tE.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+	<div class="offcanvas-header">
+		<h5 id="offcanvasRightLabel">Scan me NOW!</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<img src="https://imgur.com/aHNyyY2.png" class="rounded mx-auto d-block" alt="QRCODE">
+	</div>
+</div>
 
 <body class="bg-light">
 	<div class="container gap-2">
@@ -125,6 +132,8 @@
 				</div>
 			</div>
 		</div>
+		<button class="btn btn-primary mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+			aria-controls="offcanvasRight">Mobile form Qrcode</button>
 	</div>
 
 </body>
@@ -242,8 +251,5 @@
 			timer: 1300
 		})
 	})
-
-
 </script>
-
 </html>
