--- a/Game/index.html
+++ b/Game/index.html
@@ -21,7 +21,7 @@
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
-		<img src="https://imgur.com/aHNyyY2.png" class="rounded mx-auto d-block" alt="QRCODE">
+		<img src="https://i.imgur.com/AJKznQm.gif" class="img-fluid" style="min-width: 200px;" alt="QRCODE">
 	</div>
 </div>
 
