--- a/Game/index.html
+++ b/Game/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -28,38 +29,36 @@
 <body class="bg-light">
 	<div class="container gap-2">
 		<div class="row mt-5">
-			<div class="col-md-12 col-12">
+			<div class="col-md-6 col-12">
 				<div class="card">
 					<div class="card-body ">
-						<h3 class="card-title">電腦汰換</h3>
+						<h3 class="card-title">汰換電腦</h3>
 						<p class="card-text exctexts">
-							您好，這裡是負責電腦汰換的廠商。
-							您有預約電腦汰換，請問資料都備份完成了嗎？
-							書籤列匯出了嗎？
-							今天是否方便為您做電腦汰換呢？
-							都沒有問題的話，再跟您確認一下您的工位在哪裡？
+							您好，這裡是負責電腦汰換的廠商。</br>
+							您有預約電腦汰換，請問資料都備份完成了嗎？</br>
+							今天是否方便為您做電腦汰換呢？</br>
+							再跟您確認一下您的工位在哪裡？</br>
 						</p>
 						<a href="#" class="btn btn-primary" id="excBtn">複製</a>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row mt-2">
-			<div class="col-md-12 col-12">
+			<div class="col-md-6 col-12">
 				<div class="card">
 					<div class="card-body">
 						<h3 class="card-title">新人電腦</h3>
 						<p class="card-text newtexts">
-							您好，這裡是負責新人電腦的廠商。
-							貴單位下週一有位新人，這裡有他的電腦設備。
-							請問今天是否方便為新人做簽收呢？
-							再跟您確認一下您的工位與新人的位置在哪裡？
+							您好，這裡是負責新人電腦的廠商。</br>
+							貴單位下週一有位新人，這裡有他的電腦設備。</br>
+							請問今天是否方便為新人做簽收呢？</br>
+							再跟您確認一下您的工位與新人的位置在哪裡？</br>
 						</p>
 						<a href="#" class="btn btn-primary" id="newBtn">複製</a>
 					</div>
 				</div>
 			</div>
 		</div>
+
 		<div class="row mt-2">
 			<div class="col-md-12 col-12">
 				<div class="card text-bg-light"></div>
@@ -72,10 +71,10 @@
 					<div class="card-body">
 						<h3 class="card-title"> BENQ 螢幕散單</h3>
 						<p class="card-text benqtexts" id="benqContainer">
-							您好，這裡是電腦廠商。
-							您先前訂購的 BENQ 24吋 螢幕已經到貨了。
-							請問今天是否方便做簽收呢？
-							再跟您確認一下您的位置在哪裡？
+							您好，這裡是電腦廠商。</br>
+							您先前訂購的 BENQ 24吋 螢幕已經到貨了。</br>
+							請問今天是否方便做簽收呢？</br>
+							再跟您確認一下您的位置在哪裡？</br>
 						</p>
 						<div class="input-group">
 							<div class="input-group-prepend">
@@ -93,10 +92,10 @@
 					<div class="card-body">
 						<h3 class="card-title">LG 螢幕散單</h3>
 						<p class="card-text lgtexts" id="lgContainer">
-							您好，這裡是電腦廠商。
-							您先前訂購的 LG 24吋 螢幕已經到貨了。
-							請問今天是否方便做簽收呢？
-							再跟您確認一下您的位置在哪裡？
+							您好，這裡是電腦廠商。</br>
+							您先前訂購的 LG 24吋 螢幕已經到貨了。</br>
+							請問今天是否方便做簽收呢？</br>
+							再跟您確認一下您的位置在哪裡？</br>
 						</p>
 						<div class="input-group">
 							<div class="input-group-prepend">
@@ -116,23 +115,23 @@
 					<div class="card-body">
 						<h3 class="card-title">散單</h3>
 						<p class="card-text itemtexts" id="itemContainer">
-							您好，這裡是電腦廠商。
-							您先前訂購的東西已經到貨了，請問今天是否方便簽收呢？
-							再跟您確認一下您的位置在哪裡？
+							您好，這裡是電腦廠商。</br>
+							您先前訂購的東西已經到貨了，請問今天是否方便簽收呢？</br>
+							再跟您確認一下您的位置在哪裡？</br>
 						</p>
 						<div class="input-group">
 							<div class="input-group-prepend">
 								<a href="#" class="btn btn-primary" id="itemBtn">複製</a>
 							</div>
-							<input type="text" class="form-control" maxlength="99" placeholder="什麼東西"
+							<input type="text" class="form-control" maxlength="99" placeholder="NETGEAR、耳機、SWITCH、LCD 件數"
 								aria-describedby="basic-addon1" id="itemInput">
-							<span class="input-group-text" id="basic-addon1">輸入相應物品</span>
+							<span class="input-group-text" id="basic-addon1">輸入相應品項、件數</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<button class="btn btn-primary mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+		<button class="btn btn-dark mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
 			aria-controls="offcanvasRight">Mobile form Qrcode</button>
 	</div>
 
@@ -152,17 +151,17 @@
 	const benqInput = document.getElementById('benqInput');
 	benqInput.addEventListener('input', benqupdateValue);
 	function benqupdateValue(i) {
-		benqContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 BenQ " + i.target.value + "吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
+		benqContainer.innerHTML = "您好，這裡是電腦廠商。</br>您先前訂購的 BenQ" + i.target.value + "吋 螢幕已經到貨了。</br>請問今天是否方便做簽收呢？</br>再跟您確認一下您的位置在哪裡？</br>";
 	}
 	const lgInput = document.getElementById('lgInput');
 	lgInput.addEventListener('input', lgupdateValue);
 	function lgupdateValue(i) {
-		lgContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 LG " + i.target.value + "吋 螢幕已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
+		lgContainer.innerHTML = "您好，這裡是電腦廠商。</br>您先前訂購的 LG " + i.target.value + " 吋 螢幕已經到貨了。</br>請問今天是否方便做簽收呢？</br>再跟您確認一下您的位置在哪裡？</br>";
 	}
 	const itemInput = document.getElementById('itemInput');
 	itemInput.addEventListener('input', itemupdateValue);
 	function itemupdateValue(i) {
-		itemContainer.innerHTML = "您好，這裡是電腦廠商。您先前訂購的 " + i.target.value + " 已經到貨了。請問今天是否方便做簽收呢？再跟您確認一下您的位置在哪裡？";
+		itemContainer.innerHTML = "您好，這裡是電腦廠商。</br>您先前訂購的 " + i.target.value + " 已經到貨了。</br>請問今天是否方便做簽收呢？</br>再跟您確認一下您的位置在哪裡？</br>";
 	}
 	const excBtn = document.getElementById('excBtn')
 
